[package]
edition = "2021"
name = "no_std_collections"
version = "0.1.2"
description = "Auxiliary structures and traits for using dynamically resizable arrays (Vectors) in flexible environments, supporting both std and no_std contexts."
license = "MIT"
authors = ["Rubén Cantón <rubcc95@gmail.com>"]
repository = "https://github.com/rubcc95/no_std_collections"
documentation = "https://docs.rs/no_std_collections"

[[bench]]
name = "vec_benchmark"
harness = false

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.rand]
version = "0.8"

[features]
default = ["std"]
no_std = []
std = []
